# rust-mafia

./: .gitignore  BUILD  Cargo.toml  README.md  WORKSPACE  bazel-bin  bazel-mafia  bazel-out  bazel-rust-mafia  bazel-testlogs
cargo/: crates.bzl
cargo/remote/: difference-2.0.0.BUILD  goldenfile-1.1.0.BUILD  tempfile-3.1.0.BUILD  winapi-0.3.8.BUILD
mafia/: Cargo.toml  build.rs
mafia-bin/: Cargo.toml  build.rs
mafia-bin/src/: auth.rs  bin.rs  init.rs  lib.rs  util.rs
mafia-bin/src/server/: mod.rs
mafia-bin/src/ui/: mod.rs
mafia-bin/tests/: test_bin.rs  test_client.rs  test_server.rs  util.rs
mafia-bin/tests/test_init/: auth.ron  setup.ron
mafia-bin/tests/test_server_hello/: in.actions.txt
mafia/src/: ability.rs  action.rs  alignment.rs  attr.rs  deadline.rs  effect.rs  event.rs  faction.rs  fate.rs  game.rs  input.rs  lib.rs  log.rs  membership.rs  modifier.rs  objective.rs  phase.rs  player.rs  state.rs  util.rs  visibility.rs
mafia/tests/: test.rs  util.rs
mafia/tests/test_basic_game/: in.actions.ron  in.init.ron  in.input.ron  in.setup.ron  out.0.night_log.ron  out.1.day.ron  out.1.day_log.ron  out.1.night.ron  out.1.night_log.ron  out.2.day.ron  out.2.day_log.ron  out.2.night.ron
mafia/tests/test_mafia_win/: in.init.ron  in.setup.ron  out.0.night_log.ron  out.1.day.ron
mafia/tests/test_new/: out.ron
mafia/tests/test_no_votes/: in.actions.ron  out.0.night_log.ron  out.1.day.ron  out.1.day_log.ron  out.1.night.ron
mafia/tests/test_tie_vote/: in.input.ron  out.0.night_log.ron  out.1.day_log.ron
mafia/tests/test_tie_vote_1/: in.actions.ron  in.init.ron  in.setup.ron  out.1.day.ron  out.1.day_log.ron  out.1.night.ron
mafia/tests/test_tie_vote_2/: in.actions.ron  in.init.ron  in.setup.ron  out.0.night_log.ron  out.1.day.ron  out.1.day_log.ron  out.1.night.ron
mafia/tests/test_tie_vote_3/: in.init.ron  in.setup.ron  out.0.night_log.ron  out.1.day.ron  out.1.day_log.ron  out.1.night.ron
mafia/tests/test_town_win/: in.init.ron  in.input.ron  out.0.night_log.ron  out.1.day.ron
mafia/tests/test_win_mafia/: in.actions.ron  in.setup.ron  out.0.night_log.ron  out.1.day.ron
mafia/tests/test_win_town/: in.setup.ron  out.1.day.ron
scripts/: format_all.sh  install_git_hooks.sh  pre_commit.sh  presubmit  test_all.sh
scripts/git-hooks/: pre-commit
scripts/git_hooks/: pre-commit
src/: BUILD  bin.rs  lib.rs
tests/: BUILD
