[package]
name = "mafia-bin"
version = "0.1.0"
edition = "2018"
description = "Rust implementation of the classic party game Mafia"
keywords = ["mafia", "game"]
documentation = "https://docs.rs/mafia"
repository = "https://github.com/calder/mafia"
readme = "../README.md"
license = "MIT"
authors = [
  "Calder Coalson <caldercoalson@gmail.com>",
]

[dependencies]
structopt = "0.3"
termion = "1.5"
tokio = { version = "0.2", features = ["full"] }
tui = "0.9"
mafia = { path = "../mafia" }

[[bin]]
name = "mafia"
path = "src/bin.rs"
