[package]
name = "mafia-bin"
version = "0.1.0"
edition = "2018"
description = "Rust implementation of the classic party game Mafia"
keywords = ["mafia", "game"]
documentation = "https://docs.rs/mafia"
repository = "https://github.com/calder/mafia"
readme = "../README.md"
license = "MIT"
authors = [
  "Calder Coalson <caldercoalson@gmail.com>",
]

[dependencies]
env_logger = "0.7"
log = "0.4"
mafia = { path = "../mafia" }
structopt = "0.3"
termion = "1.5"
tokio = { version = "0.2", features = ["full"] }
tui = "0.9"

[[bin]]
name = "mafia"
path = "src/bin.rs"
